--- a/content/About.html
+++ b/content/About.html
@@ -123,7 +123,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='CMSiMDE.html'>CMSiMDE</a><ul class='dropdown'><li class='has-children'><a href='基本操作.html'>基本操作</a><ul class='dropdown'><li><a href='客製化.html'>客製化</a><li><a href='編輯網頁內容.html'>編輯網頁內容</a><li><a href='上傳與引用檔案.html'>上傳與引用檔案</a><li><a href='上傳與引用圖片.html'>上傳與引用圖片</a><li><a href='嵌入程式碼.html'>嵌入程式碼</a><li><a href='嵌入影片檔.html'>嵌入影片檔</a><li><a href='檢視 STL.html'>檢視 STL</a></li></ul><li><a href='Gitlab 同步.html'>Gitlab 同步</a><li><a href='Heroku 部署.html'>Heroku 部署</a><li><a href='Fossil SCM.html'>Fossil SCM</a></li></ul><li><a href='建立網頁.html'>建立網頁</a><li class='has-children'><a href='注意事項.html'>注意事項</a><ul class='dropdown'><li><a href='標題選擇.html'>標題選擇</a><li><a href='靜態網頁 404.html'>靜態網頁 404</a><li><a href='動態網站錯誤.html'>動態網站錯誤</a></li></ul><li class='has-children'><a href='延伸開發.html'>延伸開發</a><ul class='dropdown'><li class='has-children'><a href='已知問題.html'>已知問題</a><ul class='dropdown'><li><a href='IPv6.html'>IPv6</a><li><a href='MathJax.html'>MathJax</a><li><a href='html 分頁.html'>html 分頁</a><li><a href='template.html'>template</a></li>
+                     <li><a href='About.html'>About</a><li><a href='stage1.html'>stage1</a><li><a href='stage2.html'>stage2</a><li><a href='stage3.html'>stage3</a></li>
                       </ul>
                 </nav>
               </div>
@@ -134,25 +134,16 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='CMSiMDE.html'>Next</a> >> CMSiMDE<br /><h1>About</h1>
-<p>Repository: <a href="https://github.com/mdecourse/cmstemplate">https://github.com/mdecourse/cmstemplate</a></p>
-<p>Github Pages: <a href="https://mde.tw/cmstemplate">https://mde.tw/cmstemplate</a></p>
-<p>利用 cmstemplate 建立以 CMSiMDE 作為子模組的動態與靜態網站方法為:</p>
-<ol>
-<li>登入 Github 帳號</li>
-<li>將瀏覽器指向 <a href="https://github.com/mdecourse/cmstemplate">https://github.com/mdecourse/cmstemplate</a></li>
-<li>利用 <span style="background-color: #00ff00;">Use this template</span> 按鈕建立倉儲</li>
-</ol>
-<p>clone 帶有 CMSiMDE 的指令:</p>
-<pre class="brush:js;auto-links:false;toolbar:false" contenteditable="false">git clone --recurse-submodules URL</pre>
-<p>上述 URL 即為希望將倉儲資料取下進行改版的 Github 倉儲網路統一資源位置, 也就是 Github 倉儲網址.</p>
-<p>每一個以 cmstemplate 為 template 的倉儲, 其根目錄都帶有:</p>
-<ol>
-<li><span style="background-color: #ffff99;">init.py</span> - 其中的 site_title, ip 與 port 可以讓使用者自行修改, site_title 是網站標題, ip 為動態網站啟動時所使用的網路位址, 可設為內部或外部 IPv4 (IPv6), port 則是動態網站啟動時所佔用的埠號.</li>
-<li><span style="background-color: #ffff99;">http-server.py</span> - 執行後會使用內建的 localhost 與 port 8444 伺服 content 子目錄中的 CMSiMDE 靜態網頁.</li>
-<li><span style="background-color: #ffff99;">cms.bat</span> - 讓使用者執行動態網站用的批次檔案.</li>
-<li><span style="background-color: #ffff99;">acp.bat</span> - 若使用者已經將倉儲設為 ssh 連線, 且提供遠端與近端的認證模式, 則可以在執行此批次指令之後加上提交字串, 即可執行 git add ., git commit -m "提交訊息", 以及 git push 等三個指令.</li>
-</ol><br /> <a href='CMSiMDE.html'>Next</a> >> CMSiMDE</div>
+    <div id="tipue_search_content"> <a href='stage1.html'>Next</a> >> stage1<br /><h1>About</h1>
+<p><a href="https://github.com/40823110/stage3-ag6">40823110 repo</a><span> | </span><a href="https://40823110.github.io/stage3-ag6/content/index.html">40823110 site</a><span> </span>|</p>
+<p><span><span></span></span><a href="https://github.com/40823125/stage3-ag6">40823125 repo</a><span><a href="https://github.com/40823125/stage3-ag6"><span> </span></a>|<span> </span></span><a href="https://40823125.github.io/stage3-ag6/content/index.html">40823125 site</a><span><span> </span>|</span></p>
+<p><span></span><a href="https://github.com/40823152/stage3-ag6">40823152 repo</a><span> | </span><a href="https://40823152.github.io/stage3-ag6/content/index.html">40823152 site</a><span> |</span></p>
+<p><span><span></span></span><a href="https://github.com/40823153/stage3-ag6">40823153 repo</a><span><span> </span>|<span> </span></span><a href="https://40823153.github.io/stage3-ag6/content/index.html">40823153 site</a><span><a href="https://40823153.github.io/stage3-ag6/content/index.html"><span> </span></a>|</span></p>
+<p><span><a href="https://github.com/40823117/stage3-ag6">40823117 repo<span> </span></a>|<span> </span><a href="https://40823117.github.io/stage3-ag6/content/index.html">40823117 site</a><span> </span>|</span></p>
+<p><span><a href="https://github.com/40823122/stage3-ag6">40823122 repo<span> </span></a>|<span> </span><a href="https://40823122.github.io/stage3-ag6/content/index.html">40823122 site</a><span> </span>|</span></p>
+<p><span><a href="https://github.com/40823129/stage3-ag6">40823129 repo<span> </span></a>|<span> </span><a href="https://40823129.github.io/stage3-ag6/content/index.html">40823129 site</a><span> </span>|</span></p>
+<p><span><a href="https://github.com/40823149/stage3-ag6">40823149 repo<span> </span></a>|<span> </span><a href="https://40823149.github.io/stage3-ag6/content/index.html">40823149 site<span> </span></a>|</span></p>
+<br /> <a href='stage1.html'>Next</a> >> stage1</div>
         
     <!-- footer -->
       <div class="container">
