about change list of numbers

--- a/content/index.html
+++ b/content/index.html
@@ -134,6 +134,16 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content"> <a href='stage1.html'>Next</a> >> stage1<br /><h1>About</h1>
+<p>成員:</p>
+<p><a href="http://github.com/40823110/cd2021">40823110 repo</a><span> | </span><a href="http://40823110.github.io/cd2021">40823110 site</a><span> </span>|</p>
+<p><span><span></span></span><a href="http://github.com/40823125/cd2021">40823125 repo</a><span><span> </span>|<span> </span></span><a href="http://40823125.github.io/cd2021">40823125 site</a><span><span> </span>|</span></p>
+<p><span></span><a href="http://github.com/40823152/cd2021">40823152 repo</a><span> | </span><a href="http://40823152.github.io/cd2021">40823152 site</a><span> |</span></p>
+<p><span><span></span></span><a href="http://github.com/40823153/cd2021">40823153 repo</a><span><span> </span>|<span> </span></span><a href="http://40823153.github.io/cd2021">40823153 site</a><span><span> </span>|</span></p>
+<p><span><a href="http://github.com/40823117/cd2021">40823117 repo</a><span> </span>|<span> </span><a href="http://40823117.github.io/cd2021">40823117 site</a><span> </span>|</span></p>
+<p><span><a href="http://github.com/40823122/cd2021">40823122 repo</a><span> </span>|<span> </span><a href="http://40823122.github.io/cd2021">40823122 site</a><span> </span>|</span></p>
+<p><span><a href="http://github.com/40823129/cd2021">40823129 repo</a><span> </span>|<span> </span><a href="http://40823129.github.io/cd2021">40823129 site</a><span> </span>|</span></p>
+<p><span><a href="http://github.com/40823149/cd2021">40823149 repo</a><span> </span>|<span> </span><a href="http://40823149.github.io/cd2021">40823149 site</a><span> </span>|</span></p>
+<p>小組:</p>
 <p><a href="https://github.com/40823110/stage3-ag6">40823110 repo</a><span> | </span><a href="https://40823110.github.io/stage3-ag6/content/index.html">40823110 site</a><span> </span>|</p>
 <p><span><span></span></span><a href="https://github.com/40823125/stage3-ag6">40823125 repo</a><span><a href="https://github.com/40823125/stage3-ag6"><span> </span></a>|<span> </span></span><a href="https://40823125.github.io/stage3-ag6/content/index.html">40823125 site</a><span><span> </span>|</span></p>
 <p><span></span><a href="https://github.com/40823152/stage3-ag6">40823152 repo</a><span> | </span><a href="https://40823152.github.io/stage3-ag6/content/index.html">40823152 site</a><span> |</span></p>
