--- a/config/content.htm
+++ b/config/content.htm
@@ -29,3 +29,7 @@
 <p><span><a href="https://github.com/40823122/stage3-ag6">40823122 repo<span> </span></a>|<span> </span><a href="https://40823122.github.io/stage3-ag6/content/index.html">40823122 site</a><span> </span>|</span></p>
 <p><span><a href="https://github.com/40823129/stage3-ag6">40823129 repo<span> </span></a>|<span> </span><a href="https://40823129.github.io/stage3-ag6/content/index.html">40823129 site</a><span> </span>|</span></p>
 <p><span><a href="https://github.com/40823149/stage3-ag6">40823149 repo<span> </span></a>|<span> </span><a href="https://40823149.github.io/stage3-ag6/content/index.html">40823149 site<span> </span></a>|</span></p>
+<h2>W10</h2>
+<h3>task2</h3>
+<p>coppeliasim版本需用4.2.0版,並透過以下程式可遠端操作小車運作<img alt="" height="284" src="/images/螢幕擷取畫面 2021-05-06 011424.png" width="512"/></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/GLUDUuKU7sE" title="YouTube video player" width="560"></iframe></p>
