--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,4 +1,14 @@
 <h1>About</h1>
+<p>成員:</p>
+<p><a href="http://github.com/40823110/cd2021">40823110 repo</a><span> | </span><a href="http://40823110.github.io/cd2021">40823110 site</a><span> </span>|</p>
+<p><span><span></span></span><a href="http://github.com/40823125/cd2021">40823125 repo</a><span><span> </span>|<span> </span></span><a href="http://40823125.github.io/cd2021">40823125 site</a><span><span> </span>|</span></p>
+<p><span></span><a href="http://github.com/40823152/cd2021">40823152 repo</a><span> | </span><a href="http://40823152.github.io/cd2021">40823152 site</a><span> |</span></p>
+<p><span><span></span></span><a href="http://github.com/40823153/cd2021">40823153 repo</a><span><span> </span>|<span> </span></span><a href="http://40823153.github.io/cd2021">40823153 site</a><span><span> </span>|</span></p>
+<p><span><a href="http://github.com/40823117/cd2021">40823117 repo</a><span> </span>|<span> </span><a href="http://40823117.github.io/cd2021">40823117 site</a><span> </span>|</span></p>
+<p><span><a href="http://github.com/40823122/cd2021">40823122 repo</a><span> </span>|<span> </span><a href="http://40823122.github.io/cd2021">40823122 site</a><span> </span>|</span></p>
+<p><span><a href="http://github.com/40823129/cd2021">40823129 repo</a><span> </span>|<span> </span><a href="http://40823129.github.io/cd2021">40823129 site</a><span> </span>|</span></p>
+<p><span><a href="http://github.com/40823149/cd2021">40823149 repo</a><span> </span>|<span> </span><a href="http://40823149.github.io/cd2021">40823149 site</a><span> </span>|</span></p>
+<p>小組:</p>
 <p><a href="https://github.com/40823110/stage3-ag6">40823110 repo</a><span> | </span><a href="https://40823110.github.io/stage3-ag6/content/index.html">40823110 site</a><span> </span>|</p>
 <p><span><span></span></span><a href="https://github.com/40823125/stage3-ag6">40823125 repo</a><span><a href="https://github.com/40823125/stage3-ag6"><span> </span></a>|<span> </span></span><a href="https://40823125.github.io/stage3-ag6/content/index.html">40823125 site</a><span><span> </span>|</span></p>
 <p><span></span><a href="https://github.com/40823152/stage3-ag6">40823152 repo</a><span> | </span><a href="https://40823152.github.io/stage3-ag6/content/index.html">40823152 site</a><span> |</span></p>
@@ -19,3 +29,10 @@
 <p><span><a href="https://github.com/40823122/stage3-ag6">40823122 repo<span> </span></a>|<span> </span><a href="https://40823122.github.io/stage3-ag6/content/index.html">40823122 site</a><span> </span>|</span></p>
 <p><span><a href="https://github.com/40823129/stage3-ag6">40823129 repo<span> </span></a>|<span> </span><a href="https://40823129.github.io/stage3-ag6/content/index.html">40823129 site</a><span> </span>|</span></p>
 <p><span><a href="https://github.com/40823149/stage3-ag6">40823149 repo<span> </span></a>|<span> </span><a href="https://40823149.github.io/stage3-ag6/content/index.html">40823149 site<span> </span></a>|</span></p>
+<h2>W10</h2>
+<h3>task2</h3>
+<p>coppeliasim版本需用4.2.0版,並透過以下程式可遠端操作小車運作<img alt="" height="284" src="/images/螢幕擷取畫面 2021-05-06 011424.png" width="512"/></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/GLUDUuKU7sE" title="YouTube video player" width="560"></iframe></p><h2>W10</h2>
+<h3>task2</h3>
+<p>coppeliasim版本需用4.2.0版,並透過以下程式可遠端操作小車運作<img alt="" height="284" src="/images/螢幕擷取畫面 2021-05-06 011424.png" width="512"/></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/GLUDUuKU7sE" title="YouTube video player" width="560"></iframe></p>
