--- a/content/sitemap.html
+++ b/content/sitemap.html
@@ -121,7 +121,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='stage1.html'>stage1</a><li><a href='stage2.html'>stage2</a><li><a href='stage3.html'>stage3</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='stage1-ag7.html'>stage1-ag7</a></li></ul><li class='has-children'><a href='stage2.html'>stage2</a><ul class='dropdown'><li><a href='stage2-ag7.html'>stage2-ag7</a></li></ul><li class='has-children'><a href='stage3.html'>stage3</a><ul class='dropdown'><li class='has-children'><a href='40823149.html'>40823149</a><ul class='dropdown'><li><a href='task2.html'>task2</a></li>
                       </ul>
                 </nav>
               </div>
@@ -132,4 +132,4 @@ img.add_border {
           </div>
           
         </header>
-    </nav><section><h1>Site Map</h1><div id="tipue_search_content"></div><ul><li><a href='About.html'>About</a><li><a href='stage1.html'>stage1</a><li><a href='stage2.html'>stage2</a><li><a href='stage3.html'>stage3</a></li></ul></section></div></body></html>
+    </nav><section><h1>Site Map</h1><div id="tipue_search_content"></div><ul><li><a href='About.html'>About</a><li><a href='stage1.html'>stage1</a><ul><li><a href='stage1-ag7.html'>stage1-ag7</a></li></ul><li><a href='stage2.html'>stage2</a><ul><li><a href='stage2-ag7.html'>stage2-ag7</a></li></ul><li><a href='stage3.html'>stage3</a><ul><li><a href='40823149.html'>40823149</a><ul><li><a href='task2.html'>task2</a></li></ul></section></div></body></html>
