--- a/content/stage1.html
+++ b/content/stage1.html
@@ -123,7 +123,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='stage1.html'>stage1</a><li><a href='stage2.html'>stage2</a><li><a href='stage3.html'>stage3</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='stage1-ag7.html'>stage1-ag7</a></li></ul><li class='has-children'><a href='stage2.html'>stage2</a><ul class='dropdown'><li><a href='stage2-ag7.html'>stage2-ag7</a></li></ul><li class='has-children'><a href='stage3.html'>stage3</a><ul class='dropdown'><li class='has-children'><a href='40823149.html'>40823149</a><ul class='dropdown'><li><a href='task2.html'>task2</a></li>
                       </ul>
                 </nav>
               </div>
@@ -134,8 +134,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='stage2.html'>Next</a> >> stage2<br /><h1>stage1</h1>
-<br />About << <a href='About.html'>Previous</a> <a href='stage2.html'>Next</a> >> stage2</div>
+    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='stage1-ag7.html'>Next</a> >> stage1-ag7<br /><h1>stage1</h1>
+<br />About << <a href='About.html'>Previous</a> <a href='stage1-ag7.html'>Next</a> >> stage1-ag7</div>
         
     <!-- footer -->
       <div class="container">
