--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -47,3 +47,20 @@
 <p><span><a href="https://github.com/40823122/stage3-ag6">40823122 repo<span> </span></a>|<span> </span><a href="https://40823122.github.io/stage3-ag6/content/index.html">40823122 site</a><span> </span>|</span></p>
 <p><span><a href="https://github.com/40823129/stage3-ag6">40823129 repo<span> </span></a>|<span> </span><a href="https://40823129.github.io/stage3-ag6/content/index.html">40823129 site</a><span> </span>|</span></p>
 <p><span><a href="https://github.com/40823149/stage3-ag6">40823149 repo<span> </span></a>|<span> </span><a href="https://40823149.github.io/stage3-ag6/content/index.html">40823149 site<span> </span></a>|</span></p>
+<h2>40823149</h2>
+<h3>task2</h3>
+<p><span>下載coppeliasim 4.2.0 版本 </span><a href="/get_page/stage3/4.2.0">4.2.0 版<span>.</span></a></p>
+<p><span><img alt="" height="77" src="/images/1620282606823.jpg" width="392"/></span></p>
+<p><span>下載 <a href="http://mde.tw/cad2020/downloads/coppeliasim/vrep_remoteapi_ex.7z">http://mde.tw/cad2020/downloads/coppeliasim/vrep_remoteapi_ex.7z</a><span><span> </span></span></span></p>
+<p><span><span><img alt="" height="30" src="/images/1620283150785.jpg" width="483"/></span></span></p>
+<p><span><span>將remoteApi.dll / sim.py /simComst.py 複製島bubble 資料夾當中</span></span></p>
+<p><span><span><img alt="" height="274" src="/images/1620280574522.jpg" width="344"/></span></span></p>
+<p><span><span>將 bubblerote_remoteApi.py 拉進小白框當中<img alt="" height="34" src="/images/1620283613992.jpg" width="51"/></span></span></p>
+<p><span><span><img alt="" height="191" src="/images/1620280596486.jpg" width="395"/></span></span></p>
+<p><span><span>修改內容  {<span>將import vrep修改為 import sim as vrep}</span></span></span></p>
+<p><span><span><span><img alt="" height="458" src="/images/1620281173329.jpg" width="296"/></span></span></span></p>
+<p><span>在小白框按 Tools/go</span></p>
+<p><span>在進入coppeliasim 叫出小車 進行操作</span></p>
+<p><span><img alt="" height="360" src="/images/1620280490922.jpg" width="337"/></span></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube-nocookie.com/embed/uiuw2wHwx0s" title="YouTube video player" width="560"></iframe></p>
+<p></p>
