--- a/content/stage1-ag13.html
+++ b/content/stage1-ag13.html
@@ -123,7 +123,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='stage1-ag7.html'>stage1-ag7</a><li><a href='stage1-ag13.html'>stage1-ag13</a></li></ul><li class='has-children'><a href='stage2.html'>stage2</a><ul class='dropdown'><li><a href='stage2-ag7.html'>stage2-ag7</a></li></ul><li class='has-children'><a href='stage3.html'>stage3</a><ul class='dropdown'><li class='has-children'><a href='40823149.html'>40823149</a><ul class='dropdown'><li><a href='task2.html'>task2</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='stage1-ag7.html'>stage1-ag7</a><li><a href='Stage1-ag14.html'>Stage1-ag14</a></li></ul><li class='has-children'><a href='stage2-1.html'>stage2-1</a><ul class='dropdown'><li><a href='stage1-ag13.html'>stage1-ag13</a></li></ul><li class='has-children'><a href='stage2-2.html'>stage2-2</a><ul class='dropdown'><li><a href='stage2-ag7.html'>stage2-ag7</a></li></ul><li class='has-children'><a href='stage3.html'>stage3</a><ul class='dropdown'><li class='has-children'><a href='40823149.html'>40823149</a><ul class='dropdown'><li><a href='task2.html'>task2</a></li>
                       </ul>
                 </nav>
               </div>
@@ -134,7 +134,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">stage1-ag7 << <a href='stage1-ag7.html'>Previous</a> <a href='stage2.html'>Next</a> >> stage2<br /><h1>stage1-ag13</h1>
+    <div id="tipue_search_content">stage2-1 << <a href='stage2-1.html'>Previous</a> <a href='stage2-2.html'>Next</a> >> stage2-2<br /><h1>stage1-ag13</h1>
 <p></p>
 <p>組員:</p>
 <p>40823117 潘奕丞</p>
@@ -181,7 +181,7 @@ img.add_border {
 <p><span>模擬結果確定了倒角能夠解決晃動產生的偏差。</span></p>
 <p><span size="7" style="font-size: 200%;">第5次模擬(最終版)</span></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/G4Bj2Rfg3Ro" width="560"></iframe></p>
-<p>修改完全部問題後，加入了球體模擬被分類的貨物。</p><br />stage1-ag7 << <a href='stage1-ag7.html'>Previous</a> <a href='stage2.html'>Next</a> >> stage2</div>
+<p>修改完全部問題後，加入了球體模擬被分類的貨物。</p><br />stage2-1 << <a href='stage2-1.html'>Previous</a> <a href='stage2-2.html'>Next</a> >> stage2-2</div>
         
     <!-- footer -->
       <div class="container">
