--- a/config/content.htm
+++ b/config/content.htm
@@ -27,15 +27,14 @@
 <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/bbxsoK3pewI" title="YouTube video player" width="560"></iframe></iframe> <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/-coEvkexIoo" title="YouTube video player" width="560"></iframe></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube-nocookie.com/embed/XAn4HYchu20" title="YouTube video player" width="560"></iframe></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube-nocookie.com/embed/ruPTvzIudak" title="YouTube video player" width="560"></iframe></p>
-&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
+<p>&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD</p>
 <h2>Stage1-ag14</h2>
 <p>分組網頁:</p>
 <p><a href="https://40823125.github.io/stage1-ag14">stage1-ag14 repo </a>| <a href="https://github.com/40823125/stage1-ag14">stage1-ag14 site</a></p>
 <p><span>成員:</span></p>
 <p><span><a href="http://github.com/40823110/cd2021">40823110 repo</a><span> </span>|<span> </span><a href="http://40823110.github.io/cd2021">40823110 site</a><span> </span>|</span></p>
 <p><span><a href="http://github.com/40823125/cd2021">40823125 repo</a> | <a href="http://40823125.github.io/cd2021">40823125 site</a> |</span></p>
-<p><span><a href="http://github.com/40823132/cd2021">40823132 repo</a> | <a href="http://40823132.github.io/cd2021">40823132 site</a> |</span></p><h1>stage2</h1>
-=======
+<p><span><a href="http://github.com/40823132/cd2021">40823132 repo</a> | <a href="http://40823132.github.io/cd2021">40823132 site</a> |</span></p>
 <h2>stage1-ag13</h2>
 <p></p>
 <p>組員:</p>
@@ -83,8 +82,9 @@
 <p><span>模擬結果確定了倒角能夠解決晃動產生的偏差。</span></p>
 <p><span size="7" style="font-size: 200%;">第5次模擬(最終版)</span></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/G4Bj2Rfg3Ro" width="560"></iframe></p>
-<p>修改完全部問題後，加入了球體模擬被分類的貨物。</p><h1>stage2</h1>
-&gt;&gt;&gt;&gt;&gt;&gt;&gt; dc2cbb3fdd7e2110d75902030be428d6776a7848
+<p>修改完全部問題後，加入了球體模擬被分類的貨物。</p>
+<h1>stage2</h1>
+<p>&gt;&gt;&gt;&gt;&gt;&gt;&gt; dc2cbb3fdd7e2110d75902030be428d6776a7848</p>
 <h2>stage2-ag7</h2>
 <p><span>成員:</span></p>
 <p><span><a href="http://github.com/40823129/cd2021">40823129 repo</a> | <a href="http://40823129.github.io/cd2021">40823129 site</a> |</span></p>
