--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -34,8 +34,7 @@
 <p><span>成員:</span></p>
 <p><span><a href="http://github.com/40823110/cd2021">40823110 repo</a><span> </span>|<span> </span><a href="http://40823110.github.io/cd2021">40823110 site</a><span> </span>|</span></p>
 <p><span><a href="http://github.com/40823125/cd2021">40823125 repo</a> | <a href="http://40823125.github.io/cd2021">40823125 site</a> |</span></p>
-<p><span><a href="http://github.com/40823132/cd2021">40823132 repo</a> | <a href="http://40823132.github.io/cd2021">40823132 site</a> |</span></p>
-<p><iframe height="550" src="/get_page/downloads/2021-協同產品設計實習-stage1-ag14.pdf" width="1000"></iframe></p><h1>stage2</h1>
+<p><span><a href="http://github.com/40823132/cd2021">40823132 repo</a> | <a href="http://40823132.github.io/cd2021">40823132 site</a> |</span></p><h1>stage2</h1>
 =======
 <h2>stage1-ag13</h2>
 <p></p>
