--- a/content/Stage1-ag14.html
+++ b/content/Stage1-ag14.html
@@ -123,7 +123,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='stage1-ag7.html'>stage1-ag7</a><li><a href='Stage1-ag14.html'>Stage1-ag14</a></li></ul><li class='has-children'><a href='stage2-1.html'>stage2-1</a><ul class='dropdown'><li><a href='stage1-ag13.html'>stage1-ag13</a></li></ul><li class='has-children'><a href='stage2-2.html'>stage2-2</a><ul class='dropdown'><li><a href='stage2-ag7.html'>stage2-ag7</a></li></ul><li class='has-children'><a href='stage3.html'>stage3</a><ul class='dropdown'><li class='has-children'><a href='40823149.html'>40823149</a><ul class='dropdown'><li><a href='task2.html'>task2</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='stage1-ag7.html'>stage1-ag7</a><li><a href='Stage1-ag14.html'>Stage1-ag14</a><li><a href='stage1-ag13.html'>stage1-ag13</a></li></ul><li class='has-children'><a href='stage2.html'>stage2</a><ul class='dropdown'><li><a href='stage2-ag7.html'>stage2-ag7</a></li></ul><li class='has-children'><a href='stage3.html'>stage3</a><ul class='dropdown'><li class='has-children'><a href='40823149.html'>40823149</a><ul class='dropdown'><li><a href='task2.html'>task2</a></li>
                       </ul>
                 </nav>
               </div>
@@ -134,13 +134,14 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">stage1-ag7 << <a href='stage1-ag7.html'>Previous</a> <a href='stage2-1.html'>Next</a> >> stage2-1<br /><h1>Stage1-ag14</h1>
+    <div id="tipue_search_content">stage1-ag7 << <a href='stage1-ag7.html'>Previous</a> <a href='stage1-ag13.html'>Next</a> >> stage1-ag13<br /><h1>Stage1-ag14</h1>
 <p>分組網頁:</p>
 <p><a href="https://40823125.github.io/stage1-ag14">stage1-ag14 repo </a>| <a href="https://github.com/40823125/stage1-ag14">stage1-ag14 site</a></p>
 <p><span>成員:</span></p>
 <p><span><a href="http://github.com/40823110/cd2021">40823110 repo</a><span> </span>|<span> </span><a href="http://40823110.github.io/cd2021">40823110 site</a><span> </span>|</span></p>
 <p><span><a href="http://github.com/40823125/cd2021">40823125 repo</a> | <a href="http://40823125.github.io/cd2021">40823125 site</a> |</span></p>
-<p><span><a href="http://github.com/40823132/cd2021">40823132 repo</a> | <a href="http://40823132.github.io/cd2021">40823132 site</a> |</span></p><br />stage1-ag7 << <a href='stage1-ag7.html'>Previous</a> <a href='stage2-1.html'>Next</a> >> stage2-1</div>
+<p><span><a href="http://github.com/40823132/cd2021">40823132 repo</a> | <a href="http://40823132.github.io/cd2021">40823132 site</a> |</span></p>
+<br />stage1-ag7 << <a href='stage1-ag7.html'>Previous</a> <a href='stage1-ag13.html'>Next</a> >> stage1-ag13</div>
         
     <!-- footer -->
       <div class="container">
