--- a/content/stage1-ag7.html
+++ b/content/stage1-ag7.html
@@ -123,7 +123,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='stage1-ag7.html'>stage1-ag7</a><li><a href='Stage1-ag14.html'>Stage1-ag14</a></li></ul><li class='has-children'><a href='stage2-1.html'>stage2-1</a><ul class='dropdown'><li><a href='stage1-ag13.html'>stage1-ag13</a></li></ul><li class='has-children'><a href='stage2-2.html'>stage2-2</a><ul class='dropdown'><li><a href='stage2-ag7.html'>stage2-ag7</a></li></ul><li class='has-children'><a href='stage3.html'>stage3</a><ul class='dropdown'><li class='has-children'><a href='40823149.html'>40823149</a><ul class='dropdown'><li><a href='task2.html'>task2</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='stage1-ag7.html'>stage1-ag7</a><li><a href='Stage1-ag14.html'>Stage1-ag14</a><li><a href='stage1-ag13.html'>stage1-ag13</a></li></ul><li class='has-children'><a href='stage2.html'>stage2</a><ul class='dropdown'><li><a href='stage2-ag7.html'>stage2-ag7</a></li></ul><li class='has-children'><a href='stage3.html'>stage3</a><ul class='dropdown'><li class='has-children'><a href='40823149.html'>40823149</a><ul class='dropdown'><li><a href='task2.html'>task2</a></li>
                       </ul>
                 </nav>
               </div>
@@ -143,7 +143,7 @@ img.add_border {
 <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/bbxsoK3pewI" title="YouTube video player" width="560"></iframe></iframe> <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/-coEvkexIoo" title="YouTube video player" width="560"></iframe></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube-nocookie.com/embed/XAn4HYchu20" title="YouTube video player" width="560"></iframe></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube-nocookie.com/embed/ruPTvzIudak" title="YouTube video player" width="560"></iframe></p>
-&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
+<p>&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD</p>
 <br />stage1 << <a href='stage1.html'>Previous</a> <a href='Stage1-ag14.html'>Next</a> >> Stage1-ag14</div>
         
     <!-- footer -->
