--- a/content/stage2.html
+++ b/content/stage2.html
@@ -123,7 +123,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='stage1-ag7.html'>stage1-ag7</a><li><a href='Stage1-ag14.html'>Stage1-ag14</a></li></ul><li class='has-children'><a href='stage2-1.html'>stage2-1</a><ul class='dropdown'><li><a href='stage1-ag13.html'>stage1-ag13</a></li></ul><li class='has-children'><a href='stage2-2.html'>stage2-2</a><ul class='dropdown'><li><a href='stage2-ag7.html'>stage2-ag7</a></li></ul><li class='has-children'><a href='stage3.html'>stage3</a><ul class='dropdown'><li class='has-children'><a href='40823149.html'>40823149</a><ul class='dropdown'><li><a href='task2.html'>task2</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='stage1-ag7.html'>stage1-ag7</a><li><a href='Stage1-ag14.html'>Stage1-ag14</a><li><a href='stage1-ag13.html'>stage1-ag13</a></li></ul><li class='has-children'><a href='stage2.html'>stage2</a><ul class='dropdown'><li><a href='stage2-ag7.html'>stage2-ag7</a></li></ul><li class='has-children'><a href='stage3.html'>stage3</a><ul class='dropdown'><li class='has-children'><a href='40823149.html'>40823149</a><ul class='dropdown'><li><a href='task2.html'>task2</a></li>
                       </ul>
                 </nav>
               </div>
@@ -134,9 +134,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Stage1-ag14 << <a href='Stage1-ag14.html'>Previous</a> <a href='stage1-ag13.html'>Next</a> >> stage1-ag13<br /><h1>stage2-1</h1>
-=======
-<br />Stage1-ag14 << <a href='Stage1-ag14.html'>Previous</a> <a href='stage1-ag13.html'>Next</a> >> stage1-ag13</div>
+    <div id="tipue_search_content">stage1-ag13 << <a href='stage1-ag13.html'>Previous</a> <a href='stage2-ag7.html'>Next</a> >> stage2-ag7<br /><h1>stage2</h1>
+<p>&gt;&gt;&gt;&gt;&gt;&gt;&gt; dc2cbb3fdd7e2110d75902030be428d6776a7848</p>
+<br />stage1-ag13 << <a href='stage1-ag13.html'>Previous</a> <a href='stage2-ag7.html'>Next</a> >> stage2-ag7</div>
         
     <!-- footer -->
       <div class="container">
