task1&task2 40823125 add

--- a/config/content.htm
+++ b/config/content.htm
@@ -28,7 +28,7 @@
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube-nocookie.com/embed/XAn4HYchu20" title="YouTube video player" width="560"></iframe></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube-nocookie.com/embed/ruPTvzIudak" title="YouTube video player" width="560"></iframe></p>
 <p>&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD</p>
-<h2>Stage1-ag14</h2>
+<h2>stage1-ag14</h2>
 <p>分組網頁:</p>
 <p><a href="https://40823125.github.io/stage1-ag14">stage1-ag14 repo </a>| <a href="https://github.com/40823125/stage1-ag14">stage1-ag14 site</a></p>
 <p><span>成員:</span></p>
@@ -84,7 +84,6 @@
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/G4Bj2Rfg3Ro" width="560"></iframe></p>
 <p>修改完全部問題後，加入了球體模擬被分類的貨物。</p>
 <h1>stage2</h1>
-<p>&gt;&gt;&gt;&gt;&gt;&gt;&gt; dc2cbb3fdd7e2110d75902030be428d6776a7848</p>
 <h2>stage2-ag7</h2>
 <p><span>成員:</span></p>
 <p><span><a href="http://github.com/40823129/cd2021">40823129 repo</a> | <a href="http://40823129.github.io/cd2021">40823129 site</a> |</span></p>
@@ -95,6 +94,13 @@
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube-nocookie.com/embed/RbUCNMznACU" title="YouTube video player" width="560"></iframe></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube-nocookie.com/embed/tN9ZGCpBWww" title="YouTube video player" width="560"></iframe></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube-nocookie.com/embed/ALvtNH0qoRE" title="YouTube video player" width="560"></iframe></p>
+<h2>stage2-ag12</h2>
+<p><a href="https://github.com/40823152/stage2-ag12">stage2-ag12 repo</a> | <a href="https://40823125.github.io/stage2-ag12">stage2-ag12 site</a> |</p>
+<p>組員</p>
+<p><span><span> </span></span><a href="http://github.com/40823152/cd2021">40823152 repo</a><span><span> </span>|<span> </span></span><a href="http://40823152.github.io/cd2021">40823152 site</a><span><span> </span>|</span></p>
+<p><span><span> </span></span><a href="http://github.com/40823153/cd2021">40823153 repo</a><span><span> </span>|<span> </span></span><a href="http://40823153.github.io/cd2021">40823153 site</a><span><span> </span>|</span></p>
+<p><span><span> </span></span><a href="http://github.com/40823125/cd2021">40823125 repo</a><span><span> </span>|<span> </span></span><a href="http://40823125.github.io/cd2021">40823125 site</a><span><span> </span>|</span></p>
+<p><span><span> </span></span><a href="http://github.com/40823110/cd2021">40823110 repo</a><span><span> </span>|<span> </span></span><a href="http://40823110.github.io/cd2021">40823110 site</a> |</p>
 <h1>stage3</h1>
 <p>組長:<a href="https://github.com/40823152/stage3-ag6">40823152 repo</a><span> | </span><a href="https://40823152.github.io/stage3-ag6/content/index.html">40823152 site</a><span> |</span></p>
 <p>組員:</p>
@@ -105,10 +111,11 @@
 <p><span><a href="https://github.com/40823122/stage3-ag6">40823122 repo<span> </span></a>|<span> </span><a href="https://40823122.github.io/stage3-ag6/content/index.html">40823122 site</a><span> </span>|</span></p>
 <p><span><a href="https://github.com/40823129/stage3-ag6">40823129 repo<span> </span></a>|<span> </span><a href="https://40823129.github.io/stage3-ag6/content/index.html">40823129 site</a><span> </span>|</span></p>
 <p><span><a href="https://github.com/40823149/stage3-ag6">40823149 repo<span> </span></a>|<span> </span><a href="https://40823149.github.io/stage3-ag6/content/index.html">40823149 site<span> </span></a>|</span></p>
-<p>&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD</p>
-<h2>40823149</h2>
-<p>test</p>
-<h3>task2</h3>
+<h2>task 1</h2>
+<h3>40823125-1</h3>
+<p><a href="https://40823125.github.io/cd2021/content/task%201.html">task 1 教學</a></p>
+<h2>task 2</h2>
+<h3>40823149</h3>
 <p><span>下載coppeliasim 4.2.0 版本 </span><a href="/get_page/stage3/4.2.0">4.2.0 版<span>.</span></a></p>
 <p><span><img alt="" height="77" src="/images/1620282606823.jpg" width="392"/></span></p>
 <p><span>下載 <a href="http://mde.tw/cad2020/downloads/coppeliasim/vrep_remoteapi_ex.7z">http://mde.tw/cad2020/downloads/coppeliasim/vrep_remoteapi_ex.7z</a><span><span> </span></span></span></p>
@@ -123,5 +130,5 @@
 <p><span>在進入coppeliasim 叫出小車 進行操作</span></p>
 <p><span><img alt="" height="360" src="/images/1620280490922.jpg" width="337"/></span></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube-nocookie.com/embed/uiuw2wHwx0s" title="YouTube video player" width="560"></iframe></p>
-<p></p>
-<p></p>
+<h3>40823125-2</h3>
+<p><a href="https://40823125.github.io/cd2021/content/task%202.html">task 2 教學</a></p>
