--- a/content/40823149.html
+++ b/content/40823149.html
@@ -2,7 +2,7 @@
         <head>
         <title>CMSiMDE</title>
         <meta charset="utf-8">
-<meta property="head" content="H2">
+<meta property="head" content="H3">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -123,7 +123,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='stage1-ag7.html'>stage1-ag7</a><li><a href='Stage1-ag14.html'>Stage1-ag14</a><li><a href='stage1-ag13.html'>stage1-ag13</a></li></ul><li class='has-children'><a href='stage2.html'>stage2</a><ul class='dropdown'><li><a href='stage2-ag7.html'>stage2-ag7</a></li></ul><li class='has-children'><a href='stage3.html'>stage3</a><ul class='dropdown'><li class='has-children'><a href='40823149.html'>40823149</a><ul class='dropdown'><li><a href='task2.html'>task2</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='stage1-ag7.html'>stage1-ag7</a><li><a href='stage1-ag14.html'>stage1-ag14</a><li><a href='stage1-ag13.html'>stage1-ag13</a></li></ul><li class='has-children'><a href='stage2.html'>stage2</a><ul class='dropdown'><li><a href='stage2-ag7.html'>stage2-ag7</a><li><a href='stage2-ag12.html'>stage2-ag12</a></li></ul><li class='has-children'><a href='stage3.html'>stage3</a><ul class='dropdown'><li class='has-children'><a href='task 1.html'>task 1</a><ul class='dropdown'><li><a href='40823125-1.html'>40823125-1</a></li></ul><li class='has-children'><a href='task 2.html'>task 2</a><ul class='dropdown'><li><a href='40823149.html'>40823149</a><li><a href='40823125-2.html'>40823125-2</a></li>
                       </ul>
                 </nav>
               </div>
@@ -134,9 +134,22 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">stage3 << <a href='stage3.html'>Previous</a> <a href='task2.html'>Next</a> >> task2<br /><h1>40823149</h1>
-<p>test</p>
-<br />stage3 << <a href='stage3.html'>Previous</a> <a href='task2.html'>Next</a> >> task2</div>
+    <div id="tipue_search_content">task 2 << <a href='task 2.html'>Previous</a> <a href='40823125-2.html'>Next</a> >> 40823125-2<br /><h1>40823149</h1>
+<p><span>下載coppeliasim 4.2.0 版本 </span><a href="/get_page/stage3/4.2.0">4.2.0 版<span>.</span></a></p>
+<p><span><img alt="" height="77" src="./../images/1620282606823.jpg" width="392"/></span></p>
+<p><span>下載 <a href="http://mde.tw/cad2020/downloads/coppeliasim/vrep_remoteapi_ex.7z">http://mde.tw/cad2020/downloads/coppeliasim/vrep_remoteapi_ex.7z</a><span><span> </span></span></span></p>
+<p><span><span><img alt="" height="30" src="./../images/1620283150785.jpg" width="483"/></span></span></p>
+<p><span><span>將remoteApi.dll / sim.py /simComst.py 複製島bubble 資料夾當中</span></span></p>
+<p><span><span><img alt="" height="274" src="./../images/1620280574522.jpg" width="344"/></span></span></p>
+<p><span><span>將 bubblerote_remoteApi.py 拉進小白框當中<img alt="" height="34" src="./../images/1620283613992.jpg" width="51"/></span></span></p>
+<p><span><span><img alt="" height="191" src="./../images/1620280596486.jpg" width="395"/></span></span></p>
+<p><span><span>修改內容  {<span>將import vrep修改為 import sim as vrep}</span></span></span></p>
+<p><span><span><span><img alt="" height="458" src="./../images/1620281173329.jpg" width="296"/></span></span></span></p>
+<p><span>在小白框按 Tools/go</span></p>
+<p><span>在進入coppeliasim 叫出小車 進行操作</span></p>
+<p><span><img alt="" height="360" src="./../images/1620280490922.jpg" width="337"/></span></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube-nocookie.com/embed/uiuw2wHwx0s" title="YouTube video player" width="560"></iframe></p>
+<br />task 2 << <a href='task 2.html'>Previous</a> <a href='40823125-2.html'>Next</a> >> 40823125-2</div>
         
     <!-- footer -->
       <div class="container">
