--- a/content/40823125-2.html
+++ b/content/40823125-2.html
@@ -2,7 +2,7 @@
         <head>
         <title>CMSiMDE</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H3">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -134,8 +134,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='stage1-ag7.html'>Next</a> >> stage1-ag7<br /><h1>stage1</h1>
-<br />About << <a href='About.html'>Previous</a> <a href='stage1-ag7.html'>Next</a> >> stage1-ag7</div>
+    <div id="tipue_search_content">40823149 << <a href='40823149.html'>Previous</a> <br /><h1>40823125-2</h1>
+<p><a href="https://40823125.github.io/cd2021/content/task%202.html">task 2 教學</a></p><br />40823149 << <a href='40823149.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
