--- a/content/stage1-ag7.html
+++ b/content/stage1-ag7.html
@@ -123,7 +123,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='stage1-ag7.html'>stage1-ag7</a><li><a href='Stage1-ag14.html'>Stage1-ag14</a><li><a href='stage1-ag13.html'>stage1-ag13</a></li></ul><li class='has-children'><a href='stage2.html'>stage2</a><ul class='dropdown'><li><a href='stage2-ag7.html'>stage2-ag7</a></li></ul><li class='has-children'><a href='stage3.html'>stage3</a><ul class='dropdown'><li class='has-children'><a href='40823149.html'>40823149</a><ul class='dropdown'><li><a href='task2.html'>task2</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='stage1-ag7.html'>stage1-ag7</a><li><a href='stage1-ag14.html'>stage1-ag14</a><li><a href='stage1-ag13.html'>stage1-ag13</a></li></ul><li class='has-children'><a href='stage2.html'>stage2</a><ul class='dropdown'><li><a href='stage2-ag7.html'>stage2-ag7</a><li><a href='stage2-ag12.html'>stage2-ag12</a></li></ul><li class='has-children'><a href='stage3.html'>stage3</a><ul class='dropdown'><li class='has-children'><a href='task 1.html'>task 1</a><ul class='dropdown'><li><a href='40823125-1.html'>40823125-1</a></li></ul><li class='has-children'><a href='task 2.html'>task 2</a><ul class='dropdown'><li><a href='40823149.html'>40823149</a><li><a href='40823125-2.html'>40823125-2</a></li>
                       </ul>
                 </nav>
               </div>
@@ -134,7 +134,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">stage1 << <a href='stage1.html'>Previous</a> <a href='Stage1-ag14.html'>Next</a> >> Stage1-ag14<br /><h1>stage1-ag7</h1>
+    <div id="tipue_search_content">stage1 << <a href='stage1.html'>Previous</a> <a href='stage1-ag14.html'>Next</a> >> stage1-ag14<br /><h1>stage1-ag7</h1>
 <p><span>成員:</span></p>
 <p><span><a href="http://github.com/40823129/cd2021">40823129 repo</a> | <a href="http://40823129.github.io/cd2021">40823129 site</a> |</span></p>
 <p><span><a href="http://github.com/40823149/cd2021">40823149 repo</a><span> </span>|<span> </span><a href="http://40823149.github.io/cd2021">40823149 site</a><span> </span>|</span></p>
@@ -144,7 +144,7 @@ img.add_border {
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube-nocookie.com/embed/XAn4HYchu20" title="YouTube video player" width="560"></iframe></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube-nocookie.com/embed/ruPTvzIudak" title="YouTube video player" width="560"></iframe></p>
 <p>&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD</p>
-<br />stage1 << <a href='stage1.html'>Previous</a> <a href='Stage1-ag14.html'>Next</a> >> Stage1-ag14</div>
+<br />stage1 << <a href='stage1.html'>Previous</a> <a href='stage1-ag14.html'>Next</a> >> stage1-ag14</div>
         
     <!-- footer -->
       <div class="container">
