--- a/content/stage2-ag12.html
+++ b/content/stage2-ag12.html
@@ -2,7 +2,7 @@
         <head>
         <title>CMSiMDE</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -134,8 +134,14 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='stage1-ag7.html'>Next</a> >> stage1-ag7<br /><h1>stage1</h1>
-<br />About << <a href='About.html'>Previous</a> <a href='stage1-ag7.html'>Next</a> >> stage1-ag7</div>
+    <div id="tipue_search_content">stage2-ag7 << <a href='stage2-ag7.html'>Previous</a> <a href='stage3.html'>Next</a> >> stage3<br /><h1>stage2-ag12</h1>
+<p><a href="https://github.com/40823152/stage2-ag12">stage2-ag12 repo</a> | <a href="https://40823125.github.io/stage2-ag12">stage2-ag12 site</a> |</p>
+<p>組員</p>
+<p><span><span> </span></span><a href="http://github.com/40823152/cd2021">40823152 repo</a><span><span> </span>|<span> </span></span><a href="http://40823152.github.io/cd2021">40823152 site</a><span><span> </span>|</span></p>
+<p><span><span> </span></span><a href="http://github.com/40823153/cd2021">40823153 repo</a><span><span> </span>|<span> </span></span><a href="http://40823153.github.io/cd2021">40823153 site</a><span><span> </span>|</span></p>
+<p><span><span> </span></span><a href="http://github.com/40823125/cd2021">40823125 repo</a><span><span> </span>|<span> </span></span><a href="http://40823125.github.io/cd2021">40823125 site</a><span><span> </span>|</span></p>
+<p><span><span> </span></span><a href="http://github.com/40823110/cd2021">40823110 repo</a><span><span> </span>|<span> </span></span><a href="http://40823110.github.io/cd2021">40823110 site</a> |</p>
+<br />stage2-ag7 << <a href='stage2-ag7.html'>Previous</a> <a href='stage3.html'>Next</a> >> stage3</div>
         
     <!-- footer -->
       <div class="container">
