--- a/content/Stage1-ag14.html
+++ b/content/Stage1-ag14.html
@@ -140,8 +140,7 @@ img.add_border {
 <p><span>成員:</span></p>
 <p><span><a href="http://github.com/40823110/cd2021">40823110 repo</a><span> </span>|<span> </span><a href="http://40823110.github.io/cd2021">40823110 site</a><span> </span>|</span></p>
 <p><span><a href="http://github.com/40823125/cd2021">40823125 repo</a> | <a href="http://40823125.github.io/cd2021">40823125 site</a> |</span></p>
-<p><span><a href="http://github.com/40823132/cd2021">40823132 repo</a> | <a href="http://40823132.github.io/cd2021">40823132 site</a> |</span></p>
-<br />stage1-ag7 << <a href='stage1-ag7.html'>Previous</a> <a href='stage1-ag13.html'>Next</a> >> stage1-ag13</div>
+<p><span><a href="http://github.com/40823132/cd2021">40823132 repo</a> | <a href="http://40823132.github.io/cd2021">40823132 site</a> |</span></p><br />stage1-ag7 << <a href='stage1-ag7.html'>Previous</a> <a href='stage1-ag13.html'>Next</a> >> stage1-ag13</div>
         
     <!-- footer -->
       <div class="container">
