stage1-ag14 update

--- a/config/content.htm
+++ b/config/content.htm
@@ -30,7 +30,7 @@
 <p>&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD</p>
 <h2>stage1-ag14</h2>
 <p>分組網頁:</p>
-<p><a href="https://40823125.github.io/stage1-ag14">stage1-ag14 repo </a>| <a href="https://github.com/40823125/stage1-ag14">stage1-ag14 site</a></p>
+<p><a href="https://github.com/40823125/stage1-ag14">stage1-ag14 repo</a> | <a href="https://40823125.github.io/stage1-ag14">stage1-ag14 site</a> |</p>
 <p><span>成員:</span></p>
 <p><span><a href="http://github.com/40823110/cd2021">40823110 repo</a><span> </span>|<span> </span><a href="http://40823110.github.io/cd2021">40823110 site</a><span> </span>|</span></p>
 <p><span><a href="http://github.com/40823125/cd2021">40823125 repo</a> | <a href="http://40823125.github.io/cd2021">40823125 site</a> |</span></p>
