--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -28,9 +28,9 @@
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube-nocookie.com/embed/XAn4HYchu20" title="YouTube video player" width="560"></iframe></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube-nocookie.com/embed/ruPTvzIudak" title="YouTube video player" width="560"></iframe></p>
 <p>&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD</p>
-<h2>Stage1-ag14</h2>
+<h2>stage1-ag14</h2>
 <p>分組網頁:</p>
-<p><a href="https://40823125.github.io/stage1-ag14">stage1-ag14 repo </a>| <a href="https://github.com/40823125/stage1-ag14">stage1-ag14 site</a></p>
+<p><a href="https://github.com/40823125/stage1-ag14">stage1-ag14 repo</a> | <a href="https://40823125.github.io/stage1-ag14">stage1-ag14 site</a></p>
 <p><span>成員:</span></p>
 <p><span><a href="http://github.com/40823110/cd2021">40823110 repo</a><span> </span>|<span> </span><a href="http://40823110.github.io/cd2021">40823110 site</a><span> </span>|</span></p>
 <p><span><a href="http://github.com/40823125/cd2021">40823125 repo</a> | <a href="http://40823125.github.io/cd2021">40823125 site</a> |</span></p>
